--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,8 @@
 	<meta name="msapplication-TileImage" content="img/ico/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+		integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -65,7 +65,7 @@
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
 			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
-					alt="Logo de La Chouette Agence" height="40" /></a>
+					alt="Logo de navigation de La Chouette Agence" height="40" /></a>
 			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
 				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -101,7 +101,8 @@
 		<!-- bloc-7 -->
 		<section class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="col-12 mx-auto d-flex flex-wrap justify-content-around mt-5">
-				<form id="form_1" class="col-12 col-md-6">
+				<form id="form_1" class="col-12 col-md-6" novalidate="" success-msg="Votre message a été envoyé !"
+					fail-msg="Oops, il semble que nous ayons des problèmes avec notre messagerie, réessayez plus tard.">
 					<div class="form-group">
 						<label>
 							Nom
@@ -118,7 +119,7 @@
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="text" required id="input_504" />
 					</div>
 					<div class="form-group">
 						<label>
@@ -129,18 +130,23 @@
 						Envoyer
 					</button>
 				</form>
-				<div class="text-center col-12 col-sm-auto contact-info text-white px-5 py-2">
-					<h2 class="my-4">INFORMATIONS DE CONTACT</h2>
+				<div class="text-center col-12 col-sm-auto contact-info px-5 py-2">
+					<h2 class="my-4 text-dark">INFORMATIONS DE CONTACT</h2>
 					<ul class="list-unstyled d-flex flex-column">
 						<li>
-							<p><span>Mail :</span><a href="mailto:contact@lachouetteagence.com">
+							<p><span>Mail :</span><a href="mailto:contact@lachouetteagence.com"
+									title="envoyer un mail à La chouette agence">
 									contact@lachouetteagence.com</a></p>
+						</li>
+						<li>
+							<p><span>Téléphone :</span><a href="tel:0600000000" title="Appeler La chouette agence">
+									06 00 00 00 00</a></p>
 						</li>
 						<li>
 							<p><span>Adresse :</span> 2 place Sathonay 69001 Lyon</p>
 						</li>
 					</ul>
-					<h2 class="my-4">HORAIRES</h2>
+					<h2 class="my-4 text-dark">HORAIRES</h2>
 					<p class="text-center">Ouvert de 9h à 18h, du lundi au vendredi</p>
 				</div>
 			</div>
@@ -148,7 +154,7 @@
 			<div class="col-8 mx-auto my-5">
 				<iframe id="g-maps-lca"
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d347.8857043255585!2d4.829982896540446!3d45.76947403077419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1591975332032!5m2!1sfr!2sfr"
-					 allowfullscreen="" aria-hidden="false" tabindex="0">
+					allowfullscreen="" aria-hidden="false" tabindex="0">
 				</iframe>
 			</div>
 		</section>
@@ -161,36 +167,40 @@
 	</main>
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
-		<section class="container py-3 text-center col-12">
-			<h5 class="text-white col-12 pb-4">
+		<section class="container py-2 mx-0 text-center col-12 text-dark">
+			<h5 class="col-12 my-2">
 				La chouette agence - Agence web basée à Lyon.
 			</h5>
-			<div class="col-12 d-flex flex-wrap justify-content-between">
-
-				<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto">
-					<a class="social" href="index.html"><i class="fab fa-twitter icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fab fa-facebook-f icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fab fa-dribbble icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fab fa-instagram icon-md"></i></a>
+			<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
+				<div
+					class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
+					<a class="social" href="https://twitter.com/Lachouetteagence"><i
+							class="fab fa-twitter icon-md"></i></a>
+					<a class="social" href="https://www.facebook.com/Lachouetteagence/"><i
+							class="fab fa-facebook-f icon-md"></i></a>
+					<a class="social" href="#"><i class="fab fa-dribbble icon-md"></i></a>
+					<a class="social" href="https://www.instagram.com/Lachouetteagence"><i
+							class="fab fa-instagram icon-md"></i></a>
 				</div>
-				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left text-white pt-3"><i
+				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"><i
 						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
-				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right text-white pt-3">Nous trouver<i
+				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3">Nous trouver<i
 						class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
 			</div>
 		</section>
 	</footer>
 
 	<!-- JS, Popper.js, and jQuery -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-	</script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
+	<script src="js/jqBootstrapValidation.js"></script>
+	<script src="js/formHandler.js"></script>
 </body>
 
 </html>
