--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+		integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
 
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -72,7 +73,7 @@
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
 			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
-					alt="Logo de La Chouette Agence" height="40" /></a>
+					alt="Logo de navigation de La Chouette Agence" height="40" /></a>
 			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
 				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -91,16 +92,15 @@
 			</div>
 		</nav>
 
-		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
-			id="bloc-1-hero">
+		<section class="bloc bg-banniere bg-t-edge bloc-bg-texture texture-paper b-parallax">
 			<div class="container bloc-lg tight-width-whitespace col-sm-12 text-center">
 				<img src="img/logo.png" class="center-block image-resize-mode pb-4" width="100"
 					alt="Logo de La chouette agence">
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
-				<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-					id="cta-hero">Contact</a>
+				<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero"
+					title="Page contact de La chouette agence">Contact</a>
 			</div>
 		</section>
 	</header>
@@ -110,23 +110,23 @@
 		<section class="bloc l-bloc text-center col-lg-8 mx-auto my-5">
 			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une agence de web design qui aide les
 				entreprises à devenir attractives et visibles sur Internet.</p>
-			<div class="text-center col-12 d-flex mx-auto justify-content-around my-5">
-				<div class="col-sm-3 my-5">
-					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icon-lg"></span>
-					<h3 class="my-3 h5">WEB DESIGN</h3>
+			<div class="text-center col-12 d-flex mx-auto justify-content-around my-5 d-flex flex-wrap">
+				<div class="col-12 col-sm-3 my-5">
+					<span class="et-icon-browser  icon-dark-slate-blue icon-lg"></span>
+					<h2 class="my-3 h5">WEB DESIGN</h2>
 					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro,
 						laissez-nous vous réaliser un design dont vous serez fier.</p>
 				</div>
-				<div class="col-sm-3 my-5">
-					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icon-lg"></span>
-					<h3 class="my-3 h5">STRATÉGIE</h3>
+				<div class="col-12 col-sm-3 my-5">
+					<span class="et-icon-presentation  icon-dark-slate-blue icon-lg"></span>
+					<h2 class="my-3 h5">STRATÉGIE</h2>
 					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos
 						objectifs commerciaux afin de vous proposer le meilleur design possible.
 					</p>
 				</div>
-				<div class="col-sm-3 my-5">
-					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icon-lg"></span>
-					<h3 class="my-3 h5">ILLUSTRATIONS</h3>
+				<div class="col-12 col-sm-3 my-5">
+					<span class="et-icon-edit  icon-dark-slate-blue icon-lg"></span>
+					<h2 class="my-3 h5">ILLUSTRATIONS</h2>
 					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes
 						talentueux pour donner à vos pages une touche finale d'élégance.</p>
 				</div>
@@ -155,13 +155,14 @@
 						d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter.
 						Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 						qui seront facilement trouvable sur les moteurs de recherche.</p>
-					<a class="text-white bold-link" href="contact.html">Contactez notre équipe</a>
+					<a class="text-white bold-link" href="contact.html"
+						title="Page contact de La chouette agence">Contactez notre équipe</a>
 				</div>
 			</div>
 		</section>
 		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat">
 			<div class="col-12 text-center">
-				<h4 class="h4 py-5">Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</h4>
+				<h3 class="h4 py-5">Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</h3>
 			</div>
 			<section class="d-flex flex-wrap col-md-6 mx-auto">
 				<div class="col-sm-6 pb-md-5">
@@ -221,17 +222,17 @@
 			</section>
 		</div>
 
-		<div class="bloc bg-banniere d-bloc bloc-bg-texture texture-paper">
+		<section class="bloc bg-banniere d-bloc bloc-bg-texture texture-paper">
 			<div class="container bloc-lg text-center">
 				<h2 class="my-3 tc-white">
 					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 				</h2>
 				<div class="col-sm-12">
-					<a href="contact.html"
-						class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero"
+						title="Page contact de La chouette agence">Contact</a>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-5-cta END -->
 		<!-- ScrollToTop Button -->
 		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i class="fa fa-chevron-up"></i></a>
@@ -239,21 +240,30 @@
 	</main>
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
-		<section class="container py-3 text-center col-12">
-			<h5 class="text-white col-12 pb-4">
+		<section class="container py-2 mx-0 text-center col-12 text-dark">
+			<h5 class="col-12 my-2">
 				La chouette agence - Agence web basée à Lyon.
 			</h5>
-			<div class="col-12 d-flex flex-wrap justify-content-between">
-
-				<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto">
-					<a class="social" href="index.html"><i class="fab fa-twitter icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fab fa-facebook-f icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fab fa-dribbble icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fab fa-instagram icon-md"></i></a>
+			<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
+				<div
+					class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
+					<a class="social" href="https://twitter.com/Lachouetteagence"
+						title="Lien vers le compte twitter de La chouette agence"><i
+							class="fab fa-twitter icon-md"></i></a>
+					<a class="social" href="https://www.facebook.com/Lachouetteagence/"
+						title="Lien vers le compte facebook de La chouette agence"><i
+							class="fab fa-facebook-f icon-md"></i></a>
+					<a class="social" href="#"><i class="fab fa-dribbble icon-md"
+							title="Lien vers le compte ??? de La chouette agence"></i></a>
+					<a class="social" href="https://www.instagram.com/Lachouetteagence"
+						title="Lien vers le compte instagram de La chouette agence"><i
+							class="fab fa-instagram icon-md"></i></a>
 				</div>
-				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left text-white pt-3"><i
+				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"
+					title="Mentions légales de La chouette agence"><i
 						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
-				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right text-white pt-3">Nous trouver<i
+				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3"
+					title="Page contact de La chouette agence">Nous trouver<i
 						class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
 			</div>
 		</section>
@@ -263,9 +273,8 @@
 	<!-- Principal conteneur END -->
 
 	<!-- JS, Popper.js, and jQuery / Carousel modal-->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-	</script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 	</script>
