--- a/contact.html
+++ b/contact.html
@@ -104,25 +104,25 @@
 				<form id="form_1" class="col-12 col-md-6" novalidate="" success-msg="Votre message a été envoyé !"
 					fail-msg="Oops, il semble que nous ayons des problèmes avec notre messagerie, réessayez plus tard.">
 					<div class="form-group">
-						<label>
+						<label for="name">
 							Nom
 						</label>
 						<input id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="email">
 							Adresse email
 						</label>
 						<input id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="how">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="text" required id="input_504" />
+						<input id="how" class="form-control" type="text" required id="input_504" />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div>
@@ -168,23 +168,29 @@
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
 		<section class="container py-2 mx-0 text-center col-12 text-dark">
-			<h5 class="col-12 my-2">
+			<p class="col-12 my-2 h5">
 				La chouette agence - Agence web basée à Lyon.
-			</h5>
+			</p>
 			<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 				<div
 					class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
-					<a class="social" href="https://twitter.com/Lachouetteagence"><i
+					<a class="social" href="https://twitter.com/Lachouetteagence"
+						title="Lien vers le compte twitter de La chouette agence"><i
 							class="fab fa-twitter icon-md"></i></a>
-					<a class="social" href="https://www.facebook.com/Lachouetteagence/"><i
+					<a class="social" href="https://www.facebook.com/Lachouetteagence/"
+						title="Lien vers le compte facebook de La chouette agence"><i
 							class="fab fa-facebook-f icon-md"></i></a>
-					<a class="social" href="#"><i class="fab fa-dribbble icon-md"></i></a>
-					<a class="social" href="https://www.instagram.com/Lachouetteagence"><i
+					<a class="social" href="#"><i class="fab fa-dribbble icon-md"
+							title="Lien vers le compte ??? de La chouette agence"></i></a>
+					<a class="social" href="https://www.instagram.com/Lachouetteagence"
+						title="Lien vers le compte instagram de La chouette agence"><i
 							class="fab fa-instagram icon-md"></i></a>
 				</div>
-				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"><i
+				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"
+					title="Mentions légales de La chouette agence"><i
 						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
-				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3">Nous trouver<i
+				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3"
+					title="Page contact de La chouette agence">Nous trouver<i
 						class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
 			</div>
 		</section>
