--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 			</div>
 		</nav>
 
-		<section class="bloc bg-banniere bg-t-edge bloc-bg-texture texture-paper b-parallax">
-			<div class="container bloc-lg tight-width-whitespace col-sm-12 text-center">
+		<section class="bloc bg-banniere bg-t-edge bloc-bg-texture texture-paper b-parallax py-5">
+			<div class="col-12 col-sm-4 text-center black-background mx-auto">
 				<img src="img/logo.png" class="center-block image-resize-mode pb-4" width="100"
 					alt="Logo de La chouette agence">
-				<h1 class="text-center hero-bloc-text tc-white ">
+				<h1 class="text-center hero-bloc-text tc-white h2 ">
 					La chouette agence.
 				</h1>
-				<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero"
+				<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 					title="Page contact de La chouette agence">Contact</a>
 			</div>
 		</section>
@@ -141,11 +141,9 @@
 			</div>
 		</section>
 		<section
-			class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax bloc-lg"
-			id="bloc-3-what-i-do">
-			<div class="tight-width-whitespace black-background">
-				<div class="col-sm-12 text-center">
-					<h2 class="my-3 tc-white">
+			class="bloc bgc-atomic-tangerine bg-presentation bloc-bg-texture texture-paper b-parallax bloc-lg">
+				<div class="col-sm-6 mx-auto text-center black-background">
+					<h2 class="my-3 tc-white h4">
 						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le
 						succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 					</h2>
@@ -158,7 +156,6 @@
 					<a class="text-white bold-link" href="contact.html"
 						title="Page contact de La chouette agence">Contactez notre équipe</a>
 				</div>
-			</div>
 		</section>
 		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat">
 			<div class="col-12 text-center">
@@ -222,12 +219,12 @@
 			</section>
 		</div>
 
-		<section class="bloc bg-banniere d-bloc bloc-bg-texture texture-paper">
-			<div class="container bloc-lg text-center">
-				<h2 class="my-3 tc-white">
+		<section class="bloc bg-banniere bloc-bg-texture texture-paper p-5">
+			<div class="container text-center black-background col-12 col-md-5">
+				<h2 class="mb-3 tc-white h4">
 					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 				</h2>
-				<div class="col-sm-12">
+				<div class="col-12">
 					<a href="contact.html" class="btn btn-atomic-tangerine btn-shadows btn-rd btn-lg cta-hero"
 						title="Page contact de La chouette agence">Contact</a>
 				</div>
@@ -241,9 +238,9 @@
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
 		<section class="container py-2 mx-0 text-center col-12 text-dark">
-			<h5 class="col-12 my-2">
+			<p class="col-12 my-2 h5">
 				La chouette agence - Agence web basée à Lyon.
-			</h5>
+			</p>
 			<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
 				<div
 					class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
