--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -64,26 +64,26 @@
 
     <header>
         <nav class="navbar navbar-expand-md navbar-light px-0 py-3 col-lg-6 mx-lg-auto">
-            <a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
-                    alt="Logo de navigation de La Chouette Agence" height="40" /></a>
-            <button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end"
-                id="navbarSupportedContent">
-                <ul class="site-navigation nav navbar-nav">
-                    <li class="nav-item pl-4">
-                        <a class="nav-link" href="index.html">Accueil </a>
-                    </li>
-                    <li class="nav-item pl-4">
-                        <a class="nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine bloc-bg-texture texture-paper py-5">
+			<a class="navbar-brand px-2 px-md-4" href="index.html"><img src="img/la-chouette-agence.png"
+					alt="Logo de navigation de La Chouette Agence" height="40" /></a>
+			<button class="navbar-toggler px-2 px-md-4" type="button" data-toggle="collapse"
+				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse navba r-1 special-dropdown-nav justify-content-md-end"
+				id="navbarSupportedContent">
+				<ul class="site-navigation nav navbar-nav">
+					<li class="nav-item pl-4">
+						<a class="nav-link" href="index.html">Accueil </a>
+					</li>
+					<li class="nav-item pl-4">
+						<a class="nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+        <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine bloc-bg-texture texture-paper py-5 mx-0">
             <h1 class="text-center">
                 Mentions légales
             </h1>
@@ -98,8 +98,7 @@
             <h2 class=" py-2 mx-auto">Présentation du site :</h2>
             <p>En vertu de l’article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance
                 dans l’économie
-                numérique, il est précisé aux utilisateurs du site <a
-                    href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> l’identité des différents
+                numérique, il est précisé aux utilisateurs du site www.Lachouetteagence.fr l’identité des différents
                 intervenants dans le cadre de sa réalisation et de son suivi :</p>
 
             <h3 class="pt-3">Editeur et Propriétaire :</h3>
@@ -154,35 +153,31 @@
         <section class="py-4">
             <h2 class="text-center py-2 mx-auto">Conditions générales d’utilisation du site et des services
                 proposés.</h2>
-            <p>L’utilisation du site <a href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> implique
+            <p>L’utilisation du site www.Lachouetteagence.fr implique
                 l’acceptation pleine et entière des conditions générales d’utilisation ci-après décrites. Ces
                 conditions d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, les
-                utilisateurs du site <a href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> sont donc invités
+                utilisateurs du site www.Lachouetteagence.fr sont donc invités
                 à les consulter de manière régulière. </p>
             <p>Ce site est normalement accessible à tout moment aux utilisateurs. Une interruption pour raison de
-                maintenance technique peut être toutefois décidée par <a
-                    href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a>, qui s’efforcera alors de communiquer
+                maintenance technique peut être toutefois décidée par www.Lachouetteagence.fr, qui s’efforcera alors de communiquer
                 préalablement aux utilisateurs les dates et heures de l’intervention.</p>
-            <p>Le site <a href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> est mis à jour régulièrement
+            <p>Le site www.Lachouetteagence.fr est mis à jour régulièrement
                 par l’agence La chouette agence. De la même façon, les mentions légales peuvent être modifiées à
                 tout moment : elles s’imposent néanmoins à l’utilisateur qui est invité à s’y référer le plus
                 souvent possible afin d’en prendre connaissance.
             </p>
 
             <h3>DESCRIPTION DES SERVICES FOURNIS</h3>
-            <p>Le site <a href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> a pour objet de fournir une
+            <p>Le site www.Lachouetteagence.fr a pour objet de fournir une
                 information concernant l’ensemble des activités de la société. </p>
 
-            <p>L’agence La chouette agence s’efforce de fournir sur le site <a
-                    href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> des informations
+            <p>L’agence La chouette agence s’efforce de fournir sur le site www.Lachouetteagence.fr des informations
                 aussi précises que possible. Toutefois, il ne pourra être tenue responsable des omissions, des
                 inexactitudes et des carences dans la mise à jour, qu’elles soient de son fait ou du fait des tiers
                 partenaires qui lui fournissent ces informations. </p>
 
-            <p>Toutes les informations indiquées sur le site <a
-                    href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> sont données à titre indicatif, et
-                sont susceptibles d’évoluer. Par ailleurs, les renseignements figurant sur le site <a
-                    href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> ne sont pas exhaustifs. Ils sont
+            <p>Toutes les informations indiquées sur le site www.Lachouetteagence.fr sont données à titre indicatif, et
+                sont susceptibles d’évoluer. Par ailleurs, les renseignements figurant sur le site www.Lachouetteagence.fr ne sont pas exhaustifs. Ils sont
                 donnés sous réserve de modifications ayant été apportées depuis leur mise en ligne.</p>
         </section>
         <section class="py-4">
@@ -227,17 +222,16 @@
                 la loi n° 2004-801 du 6 août 2004, l’article L. 226-13 du Code pénal et la Directive Européenne du
                 24 octobre 1995. </p>
 
-            <p>A l’occasion de l’utilisation du site <a href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a>,
+            <p>A l’occasion de l’utilisation du site www.Lachouetteagence.fr,
                 peuvent êtres recueillies : l’URL des liens par l’intermédiaire desquels l’utilisateur a accédé au site
-                <a href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a>, le
+                www.Lachouetteagence.fr, le
                 fournisseur d’accès de l’utilisateur, l’adresse de protocole Internet (IP) de l’utilisateur. </p>
 
             <p>En tout état de cause l’agence web La chouette agence ne collecte des informations personnelles
-                relatives à l’utilisateur que pour le besoin de certains services proposés par le site <a
-                    href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a>. L’utilisateur fournit ces
+                relatives à l’utilisateur que pour le besoin de certains services proposés par le site www.Lachouetteagence.fr. L’utilisateur fournit ces
                 informations en toute connaissance de cause, notamment lorsqu’il procède
                 par lui-même à leur saisie. Il est alors précisé à l’utilisateur du site
-                <a href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> l’obligation ou non de fournir ces
+                www.Lachouetteagence.fr l’obligation ou non de fournir ces
                 informations. </p>
 
             <p>Conformément aux dispositions des articles 38 et suivants de la loi 78-17 du 6 janvier 1978 relative
@@ -246,13 +240,11 @@
                 écrite et signée, accompagnée d’une copie du titre d’identité avec signature du titulaire de la
                 pièce, en précisant l’adresse à laquelle la réponse doit être envoyée. </p>
 
-            <p>Aucune information personnelle de l’utilisateur du site <a
-                    href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a> n’est publiée à l’insu de
+            <p>Aucune information personnelle de l’utilisateur du site www.Lachouetteagence.fr n’est publiée à l’insu de
                 l’utilisateur, échangée, transférée, cédée ou vendue sur un support quelconque à des tiers. Seule
                 l’hypothèse du rachat de La chouette agence et de ses droits permettrait la transmission des dites
                 informations à l’éventuel acquéreur qui serait à son tour tenu de la même obligation de conservation
-                et de modification des données vis à vis de l’utilisateur du site <a
-                    href="www.lachouetteagence.fr">www.Lachouetteagence.fr</a>. </p>
+                et de modification des données vis à vis de l’utilisateur du site www.Lachouetteagence.fr. </p>
 
             <p>Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la
                 directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.</p>
@@ -266,28 +258,34 @@
     </main>
     <!-- Footer - bloc-8 -->
     <footer class="bloc bgc-atomic-tangerine d-bloc p-0">
-        <section class="container py-2 mx-0 text-center col-12 text-dark">
-            <h5 class="col-12 my-2">
-                La chouette agence - Agence web basée à Lyon.
-            </h5>
-            <div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
-                <div
-                    class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
-                    <a class="social" href="https://twitter.com/Lachouetteagence"><i
-                            class="fab fa-twitter icon-md"></i></a>
-                    <a class="social" href="https://www.facebook.com/Lachouetteagence/"><i
-                            class="fab fa-facebook-f icon-md"></i></a>
-                    <a class="social" href="#"><i class="fab fa-dribbble icon-md"></i></a>
-                    <a class="social" href="https://www.instagram.com/Lachouetteagence"><i
-                            class="fab fa-instagram icon-md"></i></a>
-                </div>
-                <a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"><i
-                        class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
-                <a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3">Nous trouver<i
-                        class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
-            </div>
-        </section>
-    </footer>
+		<section class="container py-2 mx-0 text-center col-12 text-dark">
+			<p class="col-12 my-2 h5">
+				La chouette agence - Agence web basée à Lyon.
+			</p>
+			<div class="col-12 d-flex flex-wrap justify-content-between p-0 mt-3">
+				<div
+					class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto align-items-end">
+					<a class="social" href="https://twitter.com/Lachouetteagence"
+						title="Lien vers le compte twitter de La chouette agence"><i
+							class="fab fa-twitter icon-md"></i></a>
+					<a class="social" href="https://www.facebook.com/Lachouetteagence/"
+						title="Lien vers le compte facebook de La chouette agence"><i
+							class="fab fa-facebook-f icon-md"></i></a>
+					<a class="social" href="#"><i class="fab fa-dribbble icon-md"
+							title="Lien vers le compte ??? de La chouette agence"></i></a>
+					<a class="social" href="https://www.instagram.com/Lachouetteagence"
+						title="Lien vers le compte instagram de La chouette agence"><i
+							class="fab fa-instagram icon-md"></i></a>
+				</div>
+				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left pt-3"
+					title="Mentions légales de La chouette agence"><i
+						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
+				<a href="contact.html" class="col-6 col-md-3 order-md-3 text-right pt-3"
+					title="Page contact de La chouette agence">Nous trouver<i
+						class="fas fa-map-marked-alt fa-lg pl-2"></i></a>
+			</div>
+		</section>
+	</footer>
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
